test/error/0001-undefined1.c
/*
PATTERN: undefined
PATTERN: c:9:5
*/

int
main()
{
	x;
}
